--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="container">
-
-    </div>
+    <button id="newGridBtn">Create new grid</button>
+    <div class="container"></div>
   </body>
 </html>
